--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mini-project-semester5",
+  "name": "draphline-frontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
